--- a/Sleuth/pom.xml
+++ b/Sleuth/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.xavier</groupId>
-    <artifactId>spring-cloud-test</artifactId>
-    <packaging>pom</packaging>
+    <artifactId>Sleuth</artifactId>
     <version>1.0-SNAPSHOT</version>
+
 
 </project>
