调用链测试

--- a/User-Service/src/main/resources/application.properties
+++ b/User-Service/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.application.name=user-service
 server.port=8081
 eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8000/eureka/,http://127.0.0.1:8001/eureka/
+spring.zipkin.base-url=http://127.0.0.1:9411/
+spring.sleuth.sampler.percentage=1
